# aoc-2024

./: Cargo.toml  justfile
benches/: all_bench.rs  day1_bench.rs  day2_bench.rs  day3_bench.rs
src/: day1.rs  day2.rs  day3.rs  lib.rs  main.rs
