[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
# flume = "0.11.1"
# glam = "0.29.2"
itertools = "0.13.0"
# rayon = "1.10.0"
# num = "0.4.3"
# pathfinding = "4.11.0"
# rand = "0.8.5"
# rayon = "1.10.0"
regex = "1.11.1"
# serde = { version = "1.0.215", features = ["derive"] }
# serde_json = "1.0.133"
tap = "1.0.1"

# [profile.release]
# debug = true

[profile.profiling]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "day1_bench"
harness = false

